--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
-}
+/* ESTILOS GLOBAIS  */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+  
+/* Declarando as varioaveis de estilo globais  */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+:root {
+   
+  /* fontes  */
+   --fontTitulo: Nunito;
+   --fontCorpo: Roboto; 
+   --fontCorpo2: green;  
+
+   /* Cores  */
+
+
+   /* Breakpoints*/
+   
+   --Desktop: 1200px; 
+   --Tablet: 960px; 
+   --Mobile:768px; 
+
+/*    Artigo de referencia para os breaks  */
+/*    https://www.chiefofdesign.com.br/design-responsivo/breakpoints/ */
+
+
+
+
+ }
+
+
+ body{
+   background-color:#1C043C;
+ }
+
+
+ 
