--- a/my-app/public/GlobalStyle.css
+++ b/my-app/public/GlobalStyle.css
@@ -1,37 +1,28 @@
-
-  
 /* Declarando as varioaveis de estilo globais  */
 
-
-
 :root {
-   
-   /* fontes  */
+    /* fontes  */
+    --fontLogo: Geometric;
     --fontTitulo: Nunito;
-    --fontCorpo: Roboto; 
-    --fontCorpo2: green;  
-
+    --fontCorpo: Roboto;
+    --fontCorpo2: green;
     /* Cores  */
- 
-
     /* Breakpoints*/
-    
-    --Desktop: 1200px; 
-    --Tablet: 960px; 
-    --Mobile:768px; 
+    --Desktop: 1200px;
+    --Tablet: 960px;
+    --Mobile: 768px;
+    /*    Artigo de referencia para os breaks  */
+    /*    https://www.chiefofdesign.com.br/design-responsivo/breakpoints/ */
+}
 
-/*    Artigo de referencia para os breaks  */
-/*    https://www.chiefofdesign.com.br/design-responsivo/breakpoints/ */
+@font-face {
+    font-family: 'Geometric';
+    src: url('/font-geometric/geometric_pw.eot');
+    src: url('/font-geometric/geometric_pw.eot?#iefix') format('embedded-opentype'), url('/font-geometric/Geometric.woff') format('woff'), url('/font-geometric/Geometric.ttf') format('truetype'), url('/font-geometric/Geometric.svg#Geometric') format('svg');
+    font-weight: bold;
+    font-style: bold;
+}
 
-
-
-
-  }
-
-
-  body{
-    background-color:#1C043C;
-  }
-
-
-  
+body {
+    background-color: #1C043C;
+}
