--- a/my-app/src/Style/Fundo.scss
+++ b/my-app/src/Style/Fundo.scss
@@ -10,8 +10,8 @@
   }
   
   $particleSize: 20vmin;
-  $animationDuration: 180s;
-  $amount: 20;
+  $animationDuration: 360s;
+  $amount: 40;
   .background h7{
     width: $particleSize;
     height: $particleSize;
@@ -23,9 +23,9 @@
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     $colors: (
-      #583C87,
-      #E45A84,
-      #FFACAC
+      transparent,
+      transparent,
+      transparent
     );
     @for $i from 1 through $amount {
       &:nth-child(#{$i}) {
@@ -35,7 +35,7 @@
         animation-duration: (random($animationDuration * 10) / 10) * 1s + 10s;
         animation-delay: random(($animationDuration + 10s) * 10) / 10 * -1s;
         transform-origin: (random(50) - 25) * 1vw (random(50) - 25) * 1vh;
-        $blurRadius: (random() + 0.5) * $particleSize * 0.5;
+        $blurRadius: (random() + 0.5) * $particleSize * 0;
         $x: if(random() > 0.5, -1, 1);
         box-shadow: ($particleSize * 2 * $x) 0 $blurRadius currentColor;
       }
