Subindo as novas fontes

--- a/my-app/public/GlobalStyle.css
+++ b/my-app/public/GlobalStyle.css
@@ -3,7 +3,7 @@
 :root {
     /* fontes  */
     --fontLogo: Geometric;
-    --fontTitulo: Nunito;
+    --fontTitulo: Bebas Neue;
     --fontCorpo: Roboto;
     --fontCorpo2: green;
     /* Cores  */
