NOVA COR DE FUNDO

--- a/my-app/src/Style/Fundo.scss
+++ b/my-app/src/Style/Fundo.scss
@@ -6,7 +6,7 @@
   .background {
     width: 100vw;
     height: 100vh;
-    background: rgb(70, 56, 96);
+    background: #340034;
   }
   
   $particleSize: 20vmin;
